# nbmath

./: .const.py.swp  .gitignore  README.md  __init__.py  pyproject.toml
math-utils/: const.py  equation.py
nbmath/: __init__.py  const.py  equation.py  geometry.py  optimize.py  plots.py  stats.py  utils.py
nbmath/plots/: __init__.py  core.py
nbmath/plots/examples/: __init__.py  cantor_stair.py  heart.py  lissajous.py  mandelbrot.py  sin.py
